--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
     <link rel="icon" href="math-sqrt.ico">
     <title>MAT 101 Game</title>
 </head>
-<body style="overflow: hidden">
+<body style="overflow: hidden; font-family: 'Times New Roman', Times, serif;">
     <div class="grid-container" id="container">
         <div id="aboutWindow" style="display:none" class="moveable">
             <table border="3">
