--- a/index.html
+++ b/index.html
@@ -645,9 +645,16 @@
                                 <td style="text-align: center">#C:100</td>
                                 <td style="text-align: center">KPS<font color=tomato><b>x1000</b></font></td>
                             </tr>
+                            <tr>
+                                <td colspan="8" style="background-color: rgb(173, 173, 173)"></td>
+                                <td colspan="2" style="text-align: center">Global KPS <font color=tomato><b>x1.2</b></font></td>
+                            </tr>
                         </table>
                         <br>
-                        There are also a few special upgrades you can buy, but I won't spoil the surprise.
+                        If you can make it to diamond level for a question type, you get the x1000 KPS multiplier for that question
+                        type, but your global KPS (for all question types) will be instantly boosted by 20%.
+                        <br><br>
+                        There are also some special upgrades you can buy, but I won't spoil the surprise.
                         They will make themselves known to you in due time.
                         <br><br>
                         <b>Greek Letter Clickables</b><br>
