--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             display: block;
             background: url('whiteboard.png');
             background-repeat: no-repeat;
-            background-size: contain;
+            background-size: 100% 100%;
             padding-top: 2.6%;
             padding-left: 2.6%;
             padding-right: 5%;
@@ -2362,7 +2362,7 @@
         </div>
         <div class="item4" id="question">
             <div id="mathProblemType" style="color:blue"></div>
-            <div class="cmath" id="mathProblem" style="font-size: 1.25vw; color: black"></div>
+            <div id="mathProblem" style="font-size: 1.25vw; color: black"></div>
             <div id="answerdiv" style="text-align:left; display:none; top: 80%; position: absolute">
                 <div style="display:inline-block; margin: 0.78vw">
                     <input type="text"
